aplicados cambios en introduccion

--- a/0_frontmatter/title_back.tex
+++ b/0_frontmatter/title_back.tex
@@ -19,9 +19,9 @@ Evaluación de competencias genéricas basada en indicadores procedentes de regi
 
 Autor: Antonio Balderas Alberico
 
-Tutor: Juan Manuel Dodero Beardo
+Director: Juan Manuel Dodero Beardo
 
-Tutor: Manuel Palomo Duarte
+Director: Manuel Palomo Duarte
 
 
 
