--- a/1_introduction/0_index.tex
+++ b/1_introduction/0_index.tex
@@ -23,6 +23,14 @@ Las competencias, las tareas y su evaluación son los pilares en los que se basa
 
 %------------------------------------------------------------------------- 
 
+Las empresas requieren que la formación adquirida por sus nuevos empleados se haya enfocado en competencias genéricas que complementen su formación profesional. Numerosos estudios afirman que el entrenamiento de competencias genéricas como el trabajo en equipo, el liderazgo o las habilidades interpersonales entre otras, tienen un efecto positivo en la adquisición de conocimiento profesional y en la empleabilidad de los estudiantes~\cite{ellis2005evaluation,mason2009employability}. La investigación educativa muestra que dichas competencias se enseñan con mayor eficacia en el periodo formativo del individuo~\cite{de2000quality}.
 
+La evaluación de competencias genéricas se ha abordado desde diferentes perspectivas. En la revisión de la literatura realizada por Curtis~\cite{curtis2004assessment} se identificaron cuatro enfoques diferentes: el primero era la evaluación desde el punto de vista del profesor, un enfoque muy eficaz sobre todo a nivel escolar, donde el profesor conoce de primera mano las características de sus estudiantes, pero que resulta difícilmente transferible; el segundo enfoque consiste en la evaluación mediante portfolios de los estudiantes, enfoque en el que se hace plenamente consciente al estudiante del desarrollo de sus habilidades y que ofrece al profesor un relato muy detallado de sus logros, pero que no está en un formato que sea fácilmente digerible ni comparable para el profesor; el tercer enfoque es la evaluación basada en la experiencia laboral, que parece ser un método útil para producir una evaluación rápida, pero al igual que ocurre con la evaluación mediante porfolio, es difícilmente estandarizable y comparable; y por último la evaluación mediante el uso de instrumentos de evaluación estándares, que aunque proporciona una evaluación eficiente y fácilmente interpretable tanto por los estudiantes como por los empleadores potenciales, presenta como desventajas que desacopla la evaluación de la enseñanza siendo un aprendizaje más sumativo que formativo.
+
+Aunque esta revisión de la literatura es relativamente antigua, pues data del año 2004, los métodos actuales no son muy diferentes. La diferencia más importante y que marca el devenir actual en la educación es el protagonismo que adquieren las \emph{Tecnologías de la Información y la Comunicación} (TIC), y que traen como consecuencia que el contexto, los métodos de enseñanza y evaluación se hayan tenido que adaptar. En una época en la que los adolescentes son nativos digitales, incorporar la tecnología a la educación aporta una serie de beneficios que ayudan a mejorar la eficiencia y la productividad en el aula, así como a aumentar el interés de los estudiantes en las actividades académicas~\cite{felipegarcia2015beneficios}. Además, los profesores pueden beneficiarse mucho de los avances tecnológicos para hacer su trabajo más atractivo y ser más eficientes en todas sus actividades cotidianas, entre ellas las tareas de evaluación. 
+
+Esta tesis surge con la idea de abordar la evaluación de competencias genéricas mediante el uso de herramientas informáticas con un enfoque que se irá desgranando en los próximos capítulos y que se basa en indicadores procedentes de los registros de dichas herramientas.
+
+ %(BUSCANDO CITA EN LIBRO).
 
 
