--- a/1_introduction/2_contexto.tex
+++ b/1_introduction/2_contexto.tex
@@ -19,9 +19,9 @@
 
 %El Grupo Software Process Improvement and Formal Methods (SPI\&FM) fue ...
 
-La idea de que la educación pueda ser tratada como una \emph{ciencia del diseño} viene de la década de los 90, con la ambición de llevar la investigación educacional de los laboratorios a la práctica. Para hacer eso, los investigadores educacionales tenían que enfrentarse a \emph{la complejidad de las situaciones del mundo real y su resistencia al control experimental}~\cite{collins2004design}. La enseñanza se considera una ciencia, pues los investigadores educacionales investigan sobre ella, mientras que los profesores en general no investigan, sino que simplemente desarrollan y comparten teorías y explicaciones basadas en su propia experiencia~\cite{laurillard2012teaching}. Además, cuando un profesor o investigador educacional adopta un método innovador para implementarlo en sus clases, este es absorbido por el proceso normal de enseñanza, de forma que la implementación real puede convertirse en algo muy diferente del diseño original, es decir, hay un abismo entre las investigación y la práctica en la educación formal~\cite{anderson2012design}. 
+La idea de que la educación pueda ser tratada como una \emph{ciencia del diseño} viene de la década de los 90, con la ambición de llevar la investigación educativa de los laboratorios a la práctica. La enseñanza se considera una ciencia, pues los investigadores en educación investigan sobre ella, mientras que los profesores en general no investigan, sino que simplemente desarrollan y comparten teorías y explicaciones basadas en su propia experiencia~\cite{laurillard2012teaching}. Además, cuando un profesor o investigador adopta un método innovador para implementarlo en sus clases, este es absorbido por el proceso normal de enseñanza, de forma que la implementación real puede convertirse en algo muy diferente del diseño original, es decir, hay un abismo entre las investigación y la práctica en la educación formal~\cite{anderson2012design}. 
 
-La metodología de \emph{investigación del diseño} (DBR, del inglés, design-based research) fue concebida para solucionar esta separación entre la teoría y la práctica en la investigación. El DBR, cuyo método práctico principal es el experimento de diseño, es un enfoque de investigación mixto interdisciplinar que se lleva a cabo directamente en el área en la que se aplica y que enriquece también el conocimiento teórico de dicho área~\cite{reimann2011design}. DBR no es una metodología clásicamente experimental, sino iterativa, que se basa en ir refinando progresivamente el diseño inicial basado en la teoría. Según el análisis realizado por Terry Andersen y Julie Shattuck~\cite{anderson2012design}, las características que un estudio DBR de calidad en la educación debe tener son las siguientes:
+La metodología DBR fue concebida para solucionar esta separación entre la teoría y la práctica en la investigación. El DBR, cuyo método práctico principal es el experimento de diseño, es un enfoque de investigación mixto interdisciplinar que se lleva a cabo directamente en el área en la que se aplica y que enriquece también el conocimiento teórico de dicho área~\cite{reimann2011design}. DBR no es una metodología clásicamente experimental, sino iterativa, que se basa en ir refinando progresivamente el diseño inicial basado en la teoría. Según el análisis realizado por Terry Andersen y Julie Shattuck~\cite{anderson2012design}, las características que un estudio DBR de calidad en la educación debe tener son las siguientes:
 
 \begin{itemize}
 \item \emph{Estar situado en un contexto educativo real}: tener lugar en un contexto educativo real avala la validez de la investigación y asegura que los resultados puedan ser efectivamente utilizados para evaluar, informar y mejorar la práctica en, al menos, este contexto y probablemte en otros.
