--- a/1_introduction/5_metodologia.tex
+++ b/1_introduction/5_metodologia.tex
@@ -2,34 +2,42 @@
 \section{Estrategia de investigación}
 \label{sec:EstrategiaInvestigacion}
 
-En esta sección se describe la estrategia de investigación que se lleva a cabo en esta tesis doctoral. En primer lugar, en la subsección \emph{diseño y creación}, se describe y justifica  la estrategia de investigación seguida. Mientras que en la subsección \emph{esquema de la estrategia de investigación}, se explica cómo dicha estrategia se puso en práctica. 
+En este apartado se describe y justifica el uso de la estrategia de investigación llevada a cabo en esta tesis doctoral.  %Mientras que en la subsección \emph{esquema de la estrategia de investigación}, se explica cómo dicha estrategia se puso en práctica. 
 
 \subsection{Diseño y creación} % Oates, 2006: https://books.google.es/books?hl=es&lr=&id=VyYmkaTtRKcC&oi 
 
-Esta tesis se basa en la estrategia de invesigación de \emph{Design and Creation} (Diseño y Creación) de Oates, enfocada en el desarrollo de un nuevo producto tecnológico o artefacto~\cite{oates2006researching}. Los tipos de artefactos que incluye son constructores (\emph{constructs}), modelos (\emph{models}), métodos (\emph{methods}) e instanciaciones (\emph{instantiations}). A continuación se describe brevemente cada uno de ellos:
+La estrategia de investigación a utilizar debía contemplar como contribución a la ciencia el desarrollo de herramientas informáticas. Ante este requisito, se decidió utilizar la estrategia de investigación \emph{Design and Creation} (Diseño y Creación) de Oates, ya que es una estrategia que se basa en el desarrollo de un nuevo artefacto o producto tecnológico~\cite{oates2006researching}. Los tipos de artefactos que abarca esta estrategia son constructores (\emph{constructs}), modelos (\emph{models}), métodos (\emph{methods}) e instanciaciones (\emph{instantiations}). En alguna ocasión, como ocurre en esta tesis, puede haber más de una contribución.
+
+Las dos contribuciones de esta tesis:
+\begin{enumerate}
+\item Un método para aplicar la ciencia del diseño en la evaluación de competencias genéricas de los estudiantes a partir de indicadores procedentes de los registros de actividades de aprendizaje
+\item Herramientas informáticas que automaticen y den soporte a la aplicación del método.
+\end{enumerate} 
+
+Al ser el propio método la principal contribución de esta investigación, la estrategia de \emph{Diseño y creación} no necesita ser combinada con ninguna otra estrategia. La estrategia de diseño y creación se basa en los principios establecidos del desarrollo de sistemas, siendo un enfoque típico de resolución de problemas que utiliza un proceso iterativo de 5 pasos que serán abordados en los diferentes capítulos de esta tesis: conocimiento (\emph{awareness}), recomendación (\emph{suggestion}), desarrollo (\emph{development}), evaluación (\emph{evaluation}) y conclusión (\emph{conclusion}).
 
 \begin{itemize}
-\item Constructores: conceptos o vocabulario utilizado en un dominio concreto relacionado con las tecnologías de la información. Por ejemplo, las nociones de entidades, objetos o flujos de datos. 
-\item Modelos: combinación de constructores que representan una situación y que son utilizados para ayudar en la comprensión de problema y en el desarrollo de una solución. Por ejemplo, un diagrama de flujo de datos. un escenario de un caso de uso o un storyboard.
-\item Métodos: directrices sobre los modelos a producir y las etapas del proceso que debe seguirse para resolver problemas utilizando las tecnologías de la información. Esto incluye metologías formales, algoritmos matemáticos, comercializadas y publicadas, tales como Metodologia de Sistemas Software o Ingenieria de la Información, manuales de procedimientos internos de la organización y descripcionesinformales de prácticas creadas a partir de la experiencia.
-\item Instanciaciones: un sistema en funcionamiento que demuestra que los constructores, modelos, métodos, ideas o teorías pueden ser implementadas en un sistema informático.
-\end{itemize}
-
-Sea cual sea el artefacto tecnológico a construir y sea cual sea su propósito, la estrategia de diseño y creación se basa en los principio establecidos del desarrollo de sistemas. La estrategia de diseño y creación es un enfoque típico de resolución de problemas y utiliza un proceso iterativo de 5 pasos que serán abordados en los diferentes capítulos de esta tesis: conocimiento (\emph{awareness}), recomendación (\emph{suggestion}), desarrollo (\emph{development}), evaluación (\emph{evaluation}) y conclusión (\emph{conclusion}).
-
-\begin{itemize}
-\item Conocimiento: reconocimiento y articulación de un problema que puede ser estudiado a partir de la literatura y donde los autores identifican areas para investigaciones futuras, lecturas sobre nuevos hallazgos en otra disciplina, a profesionales o clientes expresando la necesidad de algo, áreas para una mayor investigación o nuevos desarrollos tecnológicos.
-\item Recomendación: implica un esfuerzo de imaginación a partir de la curiosidad sobre un problema para ofrecer un nueva idea de como el problema podria ser abordado.
-\item Desarrollo: fase en la que la idea se implementa. El cómo se haga dependerá del tipo de artefacto tecnológico del que se trate. Por ejemplo, un algoritmo podria necesitar la construcción de una prueba formal. Una nueva interfaz de usuario que personifique teorías novedosas sobre la cognición humana requerirá desarrollo de software. Un método de desarrollo de sistemas deberá ser plasmado en un manual que pueda ser seguido en un proyecto de desarrollo de sistemas.
-\item Evaluación: se examina el desarrollo del artefacto y se busca una evaluación de su valor y su desviación de las expectativas.
-\item Conclusión: es donde los resultados desde el proceso de diseño son consolidados y criticados, se indica el conocimiento obtenido, junto con los cabos sueltos (resultados inesperados o anómalos que no pueden aun ser explicados y podría ser el objeto de futuras investigaciones.
+\item Conocimiento, presentado como el \emph{estado del arte} (capítulo 2), consiste en el reconocimiento y articulación del problema a ser estudiado a partir de la literatura. Para abordarlo se realizó un \emph{estudio sistemático de mapeo} que pudiera dar respuesta a las preguntas de investigación presentadas en el apartado anterior.
+\item Recomendación, presentado como el \emph{resumen de problemas encontrados} (capítulo 3), es donde se recapitulan los principales métodos y técnicas informáticas utilizados en los trabajos recogidos en el estado del arte y se ofrece un nueva idea de como el problema podría ser abordado. 
+\item Desarrollo, presentado como el \emph{método para la evaluación de competencias genéricas} (capítulo 4), describe tanto el método como las herramientas informáticas que se presentan como principales contribuciones de esta tesis.
+\item Evaluación, presentado también como \emph{evaluación} (capítulo 5), examina el desarrollo del método y se busca una evaluación de su valor y su desviación de las expectativas.
+\item Conclusión, presentado como \emph{conclusiones} (capítulo 6), es donde los resultados desde el proceso de diseño son consolidados y criticados, se indica el conocimiento obtenido, junto con los resultados inesperados o anómalos que no pudiesen ser aún ser explicados y que podrían ser el objeto de futuras investigaciones.
 \end{itemize}
 
 
+%TIPOS DE ARTEFACTOS:
 
-\subsection{Esquema de la estrategia de investigación}
+%\begin{itemize}
+%\item Constructores: conceptos o vocabulario utilizado en un dominio concreto relacionado con las tecnologías de la información. Por ejemplo, las nociones de entidades, objetos o flujos de datos. 
+%\item Modelos: combinación de constructores que representan una situación y que son utilizados para ayudar en la comprensión de problema y en el desarrollo de una solución. Por ejemplo, un diagrama de flujo de datos. un escenario de un caso de uso o un storyboard.
+%\item Métodos: directrices sobre los modelos a producir y las etapas del proceso que debe seguirse para resolver problemas utilizando las tecnologías de la información. Esto incluye metologías formales, algoritmos matemáticos, comercializadas y publicadas, tales como Metodologia de Sistemas Software o Ingenieria de la Información, manuales de procedimientos internos de la organización y descripcionesinformales de prácticas creadas a partir de la experiencia.
+%\item Instanciaciones: un sistema en funcionamiento que demuestra que los constructores, modelos, métodos, ideas o teorías pueden ser implementadas en un sistema informático.
+%\end{itemize}
 
-Conforme a la estrategia de diseño y creación se comenzará con la fase del \emph{conocimiento}, en la que se dará respuesta a las preguntas de investigación mediante un análisis de la literatura para comprender el problema de la evaluación de competencias genéricas mediante el uso de artefactos tecnológicos y se estudiará cómo se ha resuelto en investigaciones pasadas. En la fase de \emph{recomendación} se estudia la necesidad de un sistema que permita trabajar con indicadores obtenidos de los registros de actividad de los entornos virtuales para la evaluación de competencias genéricas. Para realizar esto será necesario una técnica o metodología que nos permita abordar este objetivo. Entonces pasaremos a la fase del \emph{desarrollo}, donde se mostrará el diseño de esta metodologia a partir de los diagramas de interacción, escenarios y prototipos que fueren necesarios. A continuación el sistema se probará en un entorno de aprendizaje real y será evaluado en la fase de \emph{evaluación}. Para ello se crearán y pasarán encuestas a un conjunto de expertos después de haber probado el sistema. Los datos serán evaluados mediante técnicas estadísticas XYZ (¡pendiente!). En la fase de \emph{conclusión}, los resultados obtenidos en la fase anterior seran utilizados para deducir conclusiones sobre el sistema para diseñar evaluaciones de competencias genéricas a partir de los entornos de aprendizaje virtual, su evaluación general y los pasos a tomar en el futuro.
+
+%\subsection{Esquema de la estrategia de investigación}
+
+%Conforme a la estrategia de diseño y creación se comenzará con la fase del \emph{conocimiento}, en la que se dará respuesta a las preguntas de investigación mediante un análisis de la literatura para comprender el problema de la evaluación de competencias genéricas mediante el uso de artefactos tecnológicos y se estudiará cómo se ha resuelto en investigaciones pasadas. En la fase de \emph{recomendación} se estudia la necesidad de un sistema que permita trabajar con indicadores obtenidos de los registros de actividad de los entornos virtuales para la evaluación de competencias genéricas. Para realizar esto será necesario una técnica o metodología que nos permita abordar este objetivo. Entonces pasaremos a la fase del \emph{desarrollo}, donde se mostrará el diseño de esta metodologia a partir de los diagramas de interacción, escenarios y prototipos que fueren necesarios. A continuación el sistema se probará en un entorno de aprendizaje real y será evaluado en la fase de \emph{evaluación}. Para ello se crearán y pasarán encuestas a un conjunto de expertos después de haber probado el sistema. Los datos serán evaluados mediante técnicas estadísticas XYZ (¡pendiente!). En la fase de \emph{conclusión}, los resultados obtenidos en la fase anterior seran utilizados para deducir conclusiones sobre el sistema para diseñar evaluaciones de competencias genéricas a partir de los entornos de aprendizaje virtual, su evaluación general y los pasos a tomar en el futuro.
 
 % UCD
 
