--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -747,6 +747,15 @@ author = "Leslie Borjas De Xena"
   year={2005}
 }
 
+@article{hevner2009interview,
+  title={Interview with Alan R. Hevner on “Design Science”},
+  author={Hevner, Alan R},
+  journal={Business \& Information Systems Engineering (BISE)},
+  volume={1},
+  pages={126--129},
+  year={2009}
+}
+
 @book{wiggins2003paradigms,
   title={Paradigms of personality assessment},
   author={Wiggins, Jerry S},
@@ -1288,6 +1297,56 @@ author = "Leslie Borjas De Xena"
   author={Fowler, Martin},
   year={2010},
   publisher={Pearson Education}
+}
+
+@article{mason2009employability,
+  title={Employability skills initiatives in higher education: what effects do they have on graduate labour market outcomes?},
+  author={Mason, Geoff and Williams, Gareth and Cranmer, Sue},
+  journal={Education Economics},
+  volume={17},
+  number={1},
+  pages={1--30},
+  year={2009},
+  publisher={Taylor \& Francis}
+}
+
+@article{ellis2005evaluation,
+  title={An evaluation of generic teamwork skills training with action teams: effects on cognitive and skill-based outcomes},
+  author={Ellis, Aleksander PJ and Bell, Bradford S and Ployhart, Robert E and Hollenbeck, John R and Ilgen, Daniel R},
+  journal={Personnel psychology},
+  volume={58},
+  number={3},
+  pages={641--672},
+  year={2005},
+  publisher={Wiley Online Library}
+}
+
+@article{de2000quality,
+  title={Quality and generic (professional) skills},
+  author={De La Harpe, Barbara and Radloff, Alex and Wyber, John},
+  journal={Quality in Higher Education},
+  volume={6},
+  number={3},
+  pages={231--243},
+  year={2000},
+  publisher={Taylor \& Francis}
+}
+
+@article{curtis2004assessment,
+  title={The assessment of generic skills},
+  author={Curtis, David D},
+  journal={Generic skills in vocational education and training: Research findings},
+  pages={136--56},
+  year={2004},
+  publisher={ERIC}
+}
+
+@misc{felipegarcia2015beneficios,
+  title={Los beneficios de la Tecnolog{\'i}a en la Educaci{\'o}n},
+  author={Andr{\'e}s, Felipe Garc{\'\i}a},
+  howpublished ={\url{http://www.labrechadigital.org/labrecha/Articulos/los-beneficios-de-la-tecnologia-en-la-educacion.html}},
+  note = {Accessed: 2016-01-11}
+  year={2015}
 }
 
 @comment{jabref-meta: selector_publisher:}
